err/outilslabo.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/OutilsLabo-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/outilslabo'...
Listing './lib/python3.5/site-packages/outilslabo/donneefiles'...
Compiling './lib/python3.5/site-packages/outilslabo/donneefiles/dsympy.py'...
***   File "./lib/python3.5/site-packages/outilslabo/donneefiles/dsympy.py", line 32
    print 'Erreur: Cette fonction est définie à {} arguments'.format(len(self.var))
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/outilslabo/jos.py'...
***   File "./lib/python3.5/site-packages/outilslabo/jos.py", line 119
    print 'Reduced chi2 is %.10g\n'%chi2r
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/outilslabo/labfit.py'...
***   File "./lib/python3.5/site-packages/outilslabo/labfit.py", line 96
    print '\n --- FIT DID NOT CONVERGE ---\n'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/outilslabo/outils.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (outils.py, line 12)
Compiling './lib/python3.5/site-packages/outilslabo/peakfit.py'...
***   File "./lib/python3.5/site-packages/outilslabo/peakfit.py", line 158
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/outilslabo/smooth.py'...
***   File "./lib/python3.5/site-packages/outilslabo/smooth.py", line 35
    raise ValueError, "smooth only accepts 1 dimension arrays."
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
